@@ -17,6 +17,7 @@
 package org.apache.lucene.search;
 
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -24,12 +25,12 @@ import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.apache.lucene.index.Impact;
 import org.apache.lucene.index.Impacts;
 import org.apache.lucene.index.ImpactsEnum;
 import org.apache.lucene.index.ImpactsSource;
 import org.apache.lucene.index.LeafReaderContext;
+import org.apache.lucene.index.NumericDocValues;
 import org.apache.lucene.index.PostingsEnum;
 import org.apache.lucene.index.SlowImpactsEnum;
 import org.apache.lucene.index.Term;
@@ -38,7 +39,9 @@ import org.apache.lucene.index.TermStates;
 import org.apache.lucene.index.Terms;
 import org.apache.lucene.index.TermsEnum;
 import org.apache.lucene.search.similarities.Similarity;
+import org.apache.lucene.search.similarities.Similarity.SimScorer;
 import org.apache.lucene.util.BytesRef;
+import org.apache.lucene.util.IOSupplier;
 import org.apache.lucene.util.PriorityQueue;
 
 /**
@@ -101,7 +104,7 @@ public final class SynonymQuery extends Query {
 
     /** Builds the {@link SynonymQuery}. */
     public SynonymQuery build() {
-      Collections.sort(terms, Comparator.comparing(a -> a.term));
+      terms.sort(Comparator.comparing(a -> a.term));
       return new SynonymQuery(terms.toArray(new TermAndBoost[0]), field);
     }
   }
@@ -116,9 +119,14 @@ public final class SynonymQuery extends Query {
     this.field = Objects.requireNonNull(field);
   }
 
+  /** Returns the terms of this {@link SynonymQuery} */
   public List<Term> getTerms() {
-    return Collections.unmodifiableList(
-        Arrays.stream(terms).map(t -> new Term(field, t.term)).collect(Collectors.toList()));
+    return Arrays.stream(terms).map(t -> new Term(field, t.term)).toList();
+  }
+
+  /** Returns the field name of this {@link SynonymQuery} */
+  public String getField() {
+    return field;
   }
 
   @Override
@@ -232,8 +240,7 @@ public final class SynonymQuery extends Query {
       if (indexTerms == null) {
         return super.matches(context, doc);
       }
-      List<Term> termList =
-          Arrays.stream(terms).map(t -> new Term(field, t.term)).collect(Collectors.toList());
+      List<Term> termList = Arrays.stream(terms).map(t -> new Term(field, t.term)).toList();
       return MatchesUtils.forField(
           field,
           () -> DisjunctionMatchesIterator.fromTerms(context, doc, getQuery(), field, termList));
@@ -254,9 +261,13 @@ public final class SynonymQuery extends Query {
             assert scorer instanceof TermScorer;
             freq = ((TermScorer) scorer).freq();
           }
-          LeafSimScorer docScorer = new LeafSimScorer(simWeight, context.reader(), field, true);
           Explanation freqExplanation = Explanation.match(freq, "termFreq=" + freq);
-          Explanation scoreExplanation = docScorer.explain(doc, freqExplanation);
+          NumericDocValues norms = context.reader().getNormValues(field);
+          long norm = 1L;
+          if (norms != null && norms.advanceExact(doc)) {
+            norm = norms.longValue();
+          }
+          Explanation scoreExplanation = simWeight.explain(freqExplanation, norm);
           return Explanation.match(
               scoreExplanation.getValue(),
               "weight("
@@ -273,77 +284,122 @@ public final class SynonymQuery extends Query {
     }
 
     @Override
-    public Scorer scorer(LeafReaderContext context) throws IOException {
-      List<PostingsEnum> iterators = new ArrayList<>();
-      List<ImpactsEnum> impacts = new ArrayList<>();
-      List<Float> termBoosts = new ArrayList<>();
+    public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
+      @SuppressWarnings({"rawtypes", "unchecked"})
+      IOSupplier<TermState>[] termStateSuppliers = new IOSupplier[terms.length];
       for (int i = 0; i < terms.length; i++) {
-        TermState state = termStates[i].get(context);
-        if (state != null) {
-          TermsEnum termsEnum = context.reader().terms(field).iterator();
-          termsEnum.seekExact(terms[i].term, state);
-          if (scoreMode == ScoreMode.TOP_SCORES) {
-            ImpactsEnum impactsEnum = termsEnum.impacts(PostingsEnum.FREQS);
-            iterators.add(impactsEnum);
-            impacts.add(impactsEnum);
-          } else {
-            PostingsEnum postingsEnum = termsEnum.postings(null, PostingsEnum.FREQS);
-            iterators.add(postingsEnum);
-            impacts.add(new SlowImpactsEnum(postingsEnum));
+        // schedule the I/O for terms dictionary lookups in the background
+        termStateSuppliers[i] = termStates[i].get(context);
+      }
+
+      return new ScorerSupplier() {
+
+        List<PostingsEnum> iterators;
+        List<ImpactsEnum> impacts;
+        List<Float> termBoosts;
+        long cost;
+
+        private void init() throws IOException {
+          if (iterators != null) {
+            return;
           }
-          termBoosts.add(terms[i].boost);
+          iterators = new ArrayList<>();
+          impacts = new ArrayList<>();
+          termBoosts = new ArrayList<>();
+          cost = 0L;
+
+          for (int i = 0; i < terms.length; i++) {
+            IOSupplier<TermState> supplier = termStateSuppliers[i];
+            TermState state = supplier == null ? null : supplier.get();
+            if (state != null) {
+              TermsEnum termsEnum = context.reader().terms(field).iterator();
+              termsEnum.seekExact(terms[i].term, state);
+              if (scoreMode == ScoreMode.TOP_SCORES) {
+                ImpactsEnum impactsEnum = termsEnum.impacts(PostingsEnum.FREQS);
+                iterators.add(impactsEnum);
+                impacts.add(impactsEnum);
+              } else {
+                PostingsEnum postingsEnum = termsEnum.postings(null, PostingsEnum.FREQS);
+                iterators.add(postingsEnum);
+                impacts.add(new SlowImpactsEnum(postingsEnum));
+              }
+              termBoosts.add(terms[i].boost);
+            }
+          }
+
+          for (DocIdSetIterator iterator : iterators) {
+            cost += iterator.cost();
+          }
         }
-      }
 
-      if (iterators.isEmpty()) {
-        return null;
-      }
+        @Override
+        public Scorer get(long leadCost) throws IOException {
+          init();
 
-      LeafSimScorer simScorer = new LeafSimScorer(simWeight, context.reader(), field, true);
+          if (iterators.isEmpty()) {
+            return new ConstantScoreScorer(0f, scoreMode, DocIdSetIterator.empty());
+          }
 
-      // we must optimize this case (term not in segment), disjunctions require >= 2 subs
-      if (iterators.size() == 1) {
-        final TermScorer scorer;
-        if (scoreMode == ScoreMode.TOP_SCORES) {
-          scorer = new TermScorer(this, impacts.get(0), simScorer);
-        } else {
-          scorer = new TermScorer(this, iterators.get(0), simScorer);
+          NumericDocValues norms = context.reader().getNormValues(field);
+
+          // we must optimize this case (term not in segment), disjunctions require >= 2 subs
+          if (iterators.size() == 1) {
+            final TermScorer scorer;
+            if (scoreMode == ScoreMode.TOP_SCORES) {
+              scorer = new TermScorer(impacts.get(0), simWeight, norms);
+            } else {
+              scorer = new TermScorer(iterators.get(0), simWeight, norms);
+            }
+            float boost = termBoosts.get(0);
+            return scoreMode == ScoreMode.COMPLETE_NO_SCORES || boost == 1f
+                ? scorer
+                : new FreqBoostTermScorer(boost, scorer, simWeight, norms);
+          } else {
+
+            // we use termscorers + disjunction as an impl detail
+            List<DisiWrapper> wrappers = new ArrayList<>();
+            for (int i = 0; i < iterators.size(); i++) {
+              PostingsEnum postings = iterators.get(i);
+              final TermScorer termScorer = new TermScorer(postings, simWeight, norms);
+              float boost = termBoosts.get(i);
+              final DisiWrapperFreq wrapper = new DisiWrapperFreq(termScorer, boost);
+              wrappers.add(wrapper);
+            }
+            // Even though it is called approximation, it is accurate since none of
+            // the sub iterators are two-phase iterators.
+            DisjunctionDISIApproximation disjunctionIterator =
+                new DisjunctionDISIApproximation(wrappers, leadCost);
+            DocIdSetIterator iterator = disjunctionIterator;
+
+            float[] boosts = new float[impacts.size()];
+            for (int i = 0; i < boosts.length; i++) {
+              boosts[i] = termBoosts.get(i);
+            }
+            ImpactsSource impactsSource = mergeImpacts(impacts.toArray(new ImpactsEnum[0]), boosts);
+            MaxScoreCache maxScoreCache = new MaxScoreCache(impactsSource, simWeight);
+            ImpactsDISI impactsDisi = new ImpactsDISI(iterator, maxScoreCache);
+
+            if (scoreMode == ScoreMode.TOP_SCORES) {
+              // TODO: only do this when this is the top-level scoring clause
+              // (ScorerSupplier#setTopLevelScoringClause) to save the overhead of wrapping with
+              // ImpactsDISI when it would not help
+              iterator = impactsDisi;
+            }
+
+            return new SynonymScorer(iterator, disjunctionIterator, impactsDisi, simWeight, norms);
+          }
         }
-        float boost = termBoosts.get(0);
-        return scoreMode == ScoreMode.COMPLETE_NO_SCORES || boost == 1f
-            ? scorer
-            : new FreqBoostTermScorer(boost, scorer, simScorer);
-      }
 
-      // we use termscorers + disjunction as an impl detail
-      DisiPriorityQueue queue = new DisiPriorityQueue(iterators.size());
-      for (int i = 0; i < iterators.size(); i++) {
-        PostingsEnum postings = iterators.get(i);
-        final TermScorer termScorer = new TermScorer(this, postings, simScorer);
-        float boost = termBoosts.get(i);
-        final DisiWrapperFreq wrapper = new DisiWrapperFreq(termScorer, boost);
-        queue.add(wrapper);
-      }
-      // Even though it is called approximation, it is accurate since none of
-      // the sub iterators are two-phase iterators.
-      DocIdSetIterator iterator = new DisjunctionDISIApproximation(queue);
-
-      float[] boosts = new float[impacts.size()];
-      for (int i = 0; i < boosts.length; i++) {
-        boosts[i] = termBoosts.get(i);
-      }
-      ImpactsSource impactsSource = mergeImpacts(impacts.toArray(new ImpactsEnum[0]), boosts);
-      MaxScoreCache maxScoreCache = new MaxScoreCache(impactsSource, simScorer.getSimScorer());
-      ImpactsDISI impactsDisi = new ImpactsDISI(iterator, maxScoreCache);
-
-      if (scoreMode == ScoreMode.TOP_SCORES) {
-        // TODO: only do this when this is the top-level scoring clause
-        // (ScorerSupplier#setTopLevelScoringClause) to save the overhead of wrapping with
-        // ImpactsDISI when it would not help
-        iterator = impactsDisi;
-      }
-
-      return new SynonymScorer(this, queue, iterator, impactsDisi, simScorer);
+        @Override
+        public long cost() {
+          try {
+            init();
+          } catch (IOException e) {
+            throw new UncheckedIOException(e);
+          }
+          return cost;
+        }
+      };
     }
 
     @Override
@@ -357,7 +413,7 @@ public final class SynonymQuery extends Query {
     assert impactsEnums.length == boosts.length;
     return new ImpactsSource() {
 
-      class SubIterator {
+      static class SubIterator {
         final Iterator<Impact> iterator;
         int previousFreq;
         Impact current;
@@ -439,7 +495,7 @@ public final class SynonymQuery extends Query {
                           .map(
                               impact ->
                                   new Impact((int) Math.ceil(impact.freq * boost), impact.norm))
-                          .collect(Collectors.toList());
+                          .toList();
                 } else {
                   impactList = impacts[i].getImpacts(impactsLevel);
                 }
@@ -522,24 +578,25 @@ public final class SynonymQuery extends Query {
 
   private static class SynonymScorer extends Scorer {
 
-    private final DisiPriorityQueue queue;
     private final DocIdSetIterator iterator;
+    private final DisjunctionDISIApproximation disjunctionDisi;
     private final MaxScoreCache maxScoreCache;
     private final ImpactsDISI impactsDisi;
-    private final LeafSimScorer simScorer;
+    private final SimScorer scorer;
+    private final NumericDocValues norms;
 
     SynonymScorer(
-        Weight weight,
-        DisiPriorityQueue queue,
         DocIdSetIterator iterator,
+        DisjunctionDISIApproximation disjunctionDisi,
         ImpactsDISI impactsDisi,
-        LeafSimScorer simScorer) {
-      super(weight);
-      this.queue = queue;
+        SimScorer scorer,
+        NumericDocValues norms) {
       this.iterator = iterator;
+      this.disjunctionDisi = disjunctionDisi;
       this.maxScoreCache = impactsDisi.getMaxScoreCache();
       this.impactsDisi = impactsDisi;
-      this.simScorer = simScorer;
+      this.scorer = scorer;
+      this.norms = norms;
     }
 
     @Override
@@ -548,7 +605,7 @@ public final class SynonymQuery extends Query {
     }
 
     float freq() throws IOException {
-      DisiWrapperFreq w = (DisiWrapperFreq) queue.topList();
+      DisiWrapperFreq w = (DisiWrapperFreq) disjunctionDisi.topList();
       float freq = w.freq();
       for (w = (DisiWrapperFreq) w.next; w != null; w = (DisiWrapperFreq) w.next) {
         freq += w.freq();
@@ -558,7 +615,11 @@ public final class SynonymQuery extends Query {
 
     @Override
     public float score() throws IOException {
-      return simScorer.score(iterator.docID(), freq());
+      long norm = 1L;
+      if (norms != null && norms.advanceExact(iterator.docID())) {
+        norm = norms.longValue();
+      }
+      return scorer.score(freq(), norm);
     }
 
     @Override
@@ -587,7 +648,7 @@ public final class SynonymQuery extends Query {
     final float boost;
 
     DisiWrapperFreq(Scorer scorer, float boost) {
-      super(scorer);
+      super(scorer, false);
       this.pe = (PostingsEnum) scorer.iterator();
       this.boost = boost;
     }
@@ -600,9 +661,11 @@ public final class SynonymQuery extends Query {
   private static class FreqBoostTermScorer extends FilterScorer {
     final float boost;
     final TermScorer in;
-    final LeafSimScorer docScorer;
+    final SimScorer scorer;
+    final NumericDocValues norms;
 
-    public FreqBoostTermScorer(float boost, TermScorer in, LeafSimScorer docScorer) {
+    public FreqBoostTermScorer(
+        float boost, TermScorer in, SimScorer scorer, NumericDocValues norms) {
       super(in);
       if (Float.isNaN(boost) || Float.compare(boost, 0f) < 0 || Float.compare(boost, 1f) > 0) {
         throw new IllegalArgumentException(
@@ -610,7 +673,8 @@ public final class SynonymQuery extends Query {
       }
       this.boost = boost;
       this.in = in;
-      this.docScorer = docScorer;
+      this.scorer = scorer;
+      this.norms = norms;
     }
 
     float freq() throws IOException {
@@ -619,8 +683,11 @@ public final class SynonymQuery extends Query {
 
     @Override
     public float score() throws IOException {
-      assert docID() != DocIdSetIterator.NO_MORE_DOCS;
-      return docScorer.score(in.docID(), freq());
+      long norm = 1L;
+      if (norms != null && norms.advanceExact(in.docID())) {
+        norm = norms.longValue();
+      }
+      return scorer.score(freq(), norm);
     }
 
     @Override
@@ -639,26 +706,5 @@ public final class SynonymQuery extends Query {
     }
   }
 
-  private static class TermAndBoost {
-    final BytesRef term;
-    final float boost;
-
-    TermAndBoost(BytesRef term, float boost) {
-      this.term = term;
-      this.boost = boost;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-      if (this == o) return true;
-      if (o == null || getClass() != o.getClass()) return false;
-      TermAndBoost that = (TermAndBoost) o;
-      return Float.compare(that.boost, boost) == 0 && Objects.equals(term, that.term);
-    }
-
-    @Override
-    public int hashCode() {
-      return Objects.hash(term, boost);
-    }
-  }
+  private record TermAndBoost(BytesRef term, float boost) {}
 }
