@@ -29,7 +29,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 import org.apache.lucene.analysis.standard.StandardAnalyzer;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
@@ -64,6 +63,7 @@ import org.apache.lucene.search.DocIdSetIterator;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.LeafCollector;
 import org.apache.lucene.search.MatchAllDocsQuery;
+import org.apache.lucene.search.MatchNoDocsQuery;
 import org.apache.lucene.search.PhraseQuery;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.QueryCachingPolicy;
@@ -72,6 +72,7 @@ import org.apache.lucene.search.Scorable;
 import org.apache.lucene.search.ScoreDoc;
 import org.apache.lucene.search.ScoreMode;
 import org.apache.lucene.search.Scorer;
+import org.apache.lucene.search.ScorerSupplier;
 import org.apache.lucene.search.Sort;
 import org.apache.lucene.search.SortField;
 import org.apache.lucene.search.TermQuery;
@@ -141,7 +142,7 @@ public class TestDrillSideways extends FacetTestCase {
   private IndexSearcher getNewSearcher(IndexReader reader) {
     // Do not wrap with an asserting searcher, since DrillSidewaysQuery doesn't
     // implement all the required components like Weight#scorer.
-    IndexSearcher searcher = newSearcher(reader, true, false, random().nextBoolean());
+    IndexSearcher searcher = newSearcher(reader, true, false, Concurrency.INTER_SEGMENT);
     // DrillSideways requires the entire range of docs to be scored at once, so it doesn't support
     // timeouts whose implementation scores one window of doc IDs at a time.
     searcher.setTimeout(null);
@@ -210,7 +211,7 @@ public class TestDrillSideways extends FacetTestCase {
     DrillDownQuery ddq = new DrillDownQuery(config);
     ddq.add("Color", "Blue");
 
-    // Setup an IndexSearcher that will try to cache queries aggressively:
+    // Set up an IndexSearcher that will try to cache queries aggressively:
     IndexSearcher searcher = getNewSearcher(writer.getReader());
     searcher.setQueryCachingPolicy(
         new QueryCachingPolicy() {
@@ -223,7 +224,7 @@ public class TestDrillSideways extends FacetTestCase {
           }
         });
 
-    // Setup a DS instance for searching:
+    // Set up a DS instance for searching:
     TaxonomyReader taxoReader = new DirectoryTaxonomyReader(taxoWriter);
     DrillSideways ds = getNewDrillSideways(searcher, config, taxoReader);
 
@@ -249,10 +250,7 @@ public class TestDrillSideways extends FacetTestCase {
 
     // test getTopChildren(0, dim)
     expectThrows(
-        IllegalArgumentException.class,
-        () -> {
-          concurrentResult.facets.getTopChildren(0, "Color");
-        });
+        IllegalArgumentException.class, () -> concurrentResult.facets.getTopChildren(0, "Color"));
 
     writer.close();
     IOUtils.close(searcher.getIndexReader(), taxoReader, taxoWriter, dir, taxoDir);
@@ -286,10 +284,9 @@ public class TestDrillSideways extends FacetTestCase {
         Weight dimWeight = searcher.createWeight(dimQ, ScoreMode.COMPLETE_NO_SCORES, 1f);
         Scorer dimScorer = dimWeight.scorer(ctx);
 
-        FacetsCollector baseFC = new FacetsCollector();
         FacetsCollector dimFC = new FacetsCollector();
         DrillSidewaysScorer.DocsAndCost docsAndCost =
-            new DrillSidewaysScorer.DocsAndCost(dimScorer, dimFC);
+            new DrillSidewaysScorer.DocsAndCost(dimScorer, dimFC.getLeafCollector(ctx));
 
         LeafCollector baseCollector =
             new LeafCollector() {
@@ -313,22 +310,18 @@ public class TestDrillSideways extends FacetTestCase {
             new DrillSidewaysScorer(
                 ctx,
                 baseScorer,
-                baseFC,
                 new DrillSidewaysScorer.DocsAndCost[] {docsAndCost},
                 scoreSubDocsAtOnce);
-        expectThrows(CollectionTerminatedException.class, () -> scorer.score(baseCollector, null));
+        expectThrows(
+            CollectionTerminatedException.class,
+            () -> scorer.score(baseCollector, null, 0, DocIdSetIterator.NO_MORE_DOCS));
 
         // We've set things up so that our base collector with throw CollectionTerminatedException
         // after collecting the first doc. This means we'll only collect the first indexed doc for
         // both our base and sideways dim facets collectors. What we really want to test here is
         // that the matching docs are still correctly present and populated after an early
         // termination occurs (i.e., #finish is properly called in that scenario):
-        assertEquals(1, baseFC.getMatchingDocs().size());
         assertEquals(1, dimFC.getMatchingDocs().size());
-        FacetsCollector.MatchingDocs baseMD = baseFC.getMatchingDocs().get(0);
-        FacetsCollector.MatchingDocs dimMD = dimFC.getMatchingDocs().get(0);
-        assertEquals(1, baseMD.totalHits);
-        assertEquals(1, dimMD.totalHits);
       }
     }
   }
@@ -407,23 +400,7 @@ public class TestDrillSideways extends FacetTestCase {
 
       try (IndexReader r = w.getReader();
           TaxonomyReader taxoR = new DirectoryTaxonomyReader(taxoW)) {
-
-        // We can't use AssertingIndexSearcher unfortunately since it may randomly decide to bulk
-        // score a sub-range of docs instead of all docs at once. This is incompatible will drill
-        // sideways, so we have to do our own check here. This just makes sure we call #finish on
-        // the last leaf. It's too bad we need to do this and maybe some day we can clean this up
-        // by rethinking drill-sideways:
-        IndexSearcher searcher =
-            new IndexSearcher(r) {
-              @Override
-              protected void search(
-                  List<LeafReaderContext> leaves, Weight weight, Collector collector)
-                  throws IOException {
-                AssertingCollector assertingCollector = AssertingCollector.wrap(collector);
-                super.search(leaves, weight, assertingCollector);
-                assert assertingCollector.hasFinishedCollectingPreviousLeaf;
-              }
-            };
+        IndexSearcher searcher = new DrillSidewaysAssertingIndexSearcher(r);
 
         Query baseQuery = new MatchAllDocsQuery();
         DrillDownQuery ddq = new DrillDownQuery(facetsConfig, baseQuery);
@@ -452,7 +429,7 @@ public class TestDrillSideways extends FacetTestCase {
     DrillDownQuery ddq = new DrillDownQuery(config);
     ddq.add("Author", "Lisa");
     DrillSidewaysResult r = ds.search(null, ddq, 10);
-    assertEquals(2, r.hits.totalHits.value);
+    assertEquals(2, r.hits.totalHits.value());
     // Publish Date is only drill-down, and Lisa published
     // one in 2012 and one in 2010:
     assertEquals(
@@ -472,7 +449,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("Author", "Lisa");
     ddq.add("Author", "Bob");
     r = ds.search(null, ddq, 10);
-    assertEquals(3, r.hits.totalHits.value);
+    assertEquals(3, r.hits.totalHits.value());
     // Publish Date is only drill-down: Lisa and Bob
     // (drill-down) published twice in 2010 and once in 2012:
     assertEquals(
@@ -510,18 +487,14 @@ public class TestDrillSideways extends FacetTestCase {
 
     // test getAllDims(0)
     DrillSidewaysResult finalR1 = r;
-    expectThrows(
-        IllegalArgumentException.class,
-        () -> {
-          finalR1.facets.getAllDims(0);
-        });
+    expectThrows(IllegalArgumentException.class, () -> finalR1.facets.getAllDims(0));
 
     // More interesting case: drill-down on two fields
     ddq = new DrillDownQuery(config);
     ddq.add("Author", "Lisa");
     ddq.add("Publish Date", "2010");
     r = ds.search(null, ddq, 10);
-    assertEquals(1, r.hits.totalHits.value);
+    assertEquals(1, r.hits.totalHits.value());
     // Publish Date is drill-sideways + drill-down: Lisa
     // (drill-down) published once in 2010 and once in 2012:
     assertEquals(
@@ -542,7 +515,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("Publish Date", "2010");
     ddq.add("Author", "Bob");
     r = ds.search(null, ddq, 10);
-    assertEquals(2, r.hits.totalHits.value);
+    assertEquals(2, r.hits.totalHits.value());
     // Publish Date is both drill-sideways + drill-down:
     // Lisa or Bob published twice in 2010 and once in 2012:
     assertEquals(
@@ -558,7 +531,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq = new DrillDownQuery(config);
     ddq.add("Foobar", "Baz");
     r = ds.search(null, ddq, 10);
-    assertEquals(0, r.hits.totalHits.value);
+    assertEquals(0, r.hits.totalHits.value());
     assertNull(r.facets.getTopChildren(10, "Publish Date"));
     assertNull(r.facets.getTopChildren(10, "Foobar"));
 
@@ -567,7 +540,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("Author", "Lisa");
     ddq.add("Author", "Tom");
     r = ds.search(null, ddq, 10);
-    assertEquals(2, r.hits.totalHits.value);
+    assertEquals(2, r.hits.totalHits.value());
     // Publish Date is only drill-down, and Lisa published
     // one in 2012 and one in 2010:
     assertEquals(
@@ -586,7 +559,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("Author", "Lisa");
     ddq.add("Author", "Tom");
     r = ds.search(null, ddq, 10);
-    assertEquals(2, r.hits.totalHits.value);
+    assertEquals(2, r.hits.totalHits.value());
     // Publish Date is only drill-down, and Lisa published
     // one in 2012 and one in 2010:
     assertEquals(
@@ -598,17 +571,13 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("Author", "Lisa");
     r = ds.search(null, ddq, 10);
 
-    assertEquals(0, r.hits.totalHits.value);
+    assertEquals(0, r.hits.totalHits.value());
     assertNull(r.facets.getTopChildren(10, "Publish Date"));
     assertNull(r.facets.getTopChildren(10, "Author"));
 
     // test getTopChildren(0, dim)
     DrillSidewaysResult finalR = r;
-    expectThrows(
-        IllegalArgumentException.class,
-        () -> {
-          finalR.facets.getTopChildren(0, "Author");
-        });
+    expectThrows(IllegalArgumentException.class, () -> finalR.facets.getTopChildren(0, "Author"));
   }
 
   public void testBasicWithCollectorManager() throws Exception {
@@ -933,7 +902,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("Author", "Lisa");
     DrillSidewaysResult r = getNewDrillSideways(searcher, config, taxoReader).search(null, ddq, 10);
 
-    assertEquals(1, r.hits.totalHits.value);
+    assertEquals(1, r.hits.totalHits.value());
     // Publish Date is only drill-down, and Lisa published
     // one in 2012 and one in 2010:
     assertEquals(
@@ -999,7 +968,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("dim", "a");
     DrillSidewaysResult r = getNewDrillSideways(searcher, config, taxoReader).search(null, ddq, 10);
 
-    assertEquals(3, r.hits.totalHits.value);
+    assertEquals(3, r.hits.totalHits.value());
     assertEquals(
         "dim=dim path=[] value=6 childCount=4\n  a (3)\n  b (1)\n  c (1)\n  d (1)\n",
         r.facets.getTopChildren(10, "dim").toString());
@@ -1022,7 +991,7 @@ public class TestDrillSideways extends FacetTestCase {
     int[] dims;
 
     // 2nd value per dim for the doc (so we test
-    // multi-valued fields):
+    // multivalued fields):
     int[] dims2;
     boolean deleted;
 
@@ -1103,7 +1072,7 @@ public class TestDrillSideways extends FacetTestCase {
           values.add(s);
         }
       }
-      dimValues[dim] = values.toArray(new String[values.size()]);
+      dimValues[dim] = values.toArray(new String[0]);
       valueCount *= 2;
     }
 
@@ -1337,31 +1306,36 @@ public class TestDrillSideways extends FacetTestCase {
               public Weight createWeight(IndexSearcher searcher, ScoreMode scoreMode, float boost)
                   throws IOException {
                 return new ConstantScoreWeight(this, boost) {
-
                   @Override
-                  public Scorer scorer(LeafReaderContext context) throws IOException {
+                  public ScorerSupplier scorerSupplier(LeafReaderContext context)
+                      throws IOException {
                     DocIdSetIterator approximation =
                         DocIdSetIterator.all(context.reader().maxDoc());
-                    return new ConstantScoreScorer(
-                        this,
-                        score(),
-                        scoreMode,
-                        new TwoPhaseIterator(approximation) {
+                    final var scorer =
+                        new ConstantScoreScorer(
+                            score(),
+                            scoreMode,
+                            new TwoPhaseIterator(approximation) {
 
-                          @Override
-                          public boolean matches() throws IOException {
-                            int docID = approximation.docID();
-                            return (Integer.parseInt(
-                                        context.reader().storedFields().document(docID).get("id"))
-                                    & 1)
-                                == 0;
-                          }
+                              @Override
+                              public boolean matches() throws IOException {
+                                int docID = approximation.docID();
+                                return (Integer.parseInt(
+                                            context
+                                                .reader()
+                                                .storedFields()
+                                                .document(docID)
+                                                .get("id"))
+                                        & 1)
+                                    == 0;
+                              }
 
-                          @Override
-                          public float matchCost() {
-                            return 1000f;
-                          }
-                        });
+                              @Override
+                              public float matchCost() {
+                                return 1000f;
+                              }
+                            });
+                    return new DefaultScorerSupplier(scorer);
                   }
 
                   @Override
@@ -1458,7 +1432,7 @@ public class TestDrillSideways extends FacetTestCase {
         q = new BooleanQuery.Builder().add(q, Occur.MUST).add(filter, Occur.FILTER).build();
       }
       TopDocs ddqHits = s.search(q, numDocs);
-      assertEquals(expected.hits.size(), ddqHits.totalHits.value);
+      assertEquals(expected.hits.size(), ddqHits.totalHits.value());
       for (int i = 0; i < expected.hits.size(); i++) {
         // Score should be IDENTICAL:
         assertEquals(scores.get(expected.hits.get(i).id), ddqHits.scoreDocs[i].score, 0.0f);
@@ -1467,6 +1441,67 @@ public class TestDrillSideways extends FacetTestCase {
 
     w.close();
     IOUtils.close(r, tr, tw, d, td);
+  }
+
+  public void testFinishOnAllDimsNoHitsQuery() throws Exception {
+    try (Directory dir = newDirectory();
+        Directory taxoDir = newDirectory();
+        RandomIndexWriter w = new RandomIndexWriter(random(), dir);
+        DirectoryTaxonomyWriter taxoW =
+            new DirectoryTaxonomyWriter(taxoDir, IndexWriterConfig.OpenMode.CREATE)) {
+      FacetsConfig facetsConfig = new FacetsConfig();
+
+      Document d = new Document();
+      d.add(new FacetField("foo", "bar"));
+      w.addDocument(facetsConfig.build(taxoW, d));
+
+      try (IndexReader r = w.getReader();
+          TaxonomyReader taxoR = new DirectoryTaxonomyReader(taxoW)) {
+        IndexSearcher searcher = new DrillSidewaysAssertingIndexSearcher(r);
+
+        // Creating a query that matches nothing to make sure #finish still gets called on all
+        // facet collectors:
+        Query baseQuery = new MatchNoDocsQuery();
+        DrillDownQuery ddq = new DrillDownQuery(facetsConfig, baseQuery);
+        ddq.add("foo", "bar");
+        DrillSideways drillSideways =
+            new DrillSideways(searcher, facetsConfig, taxoR) {
+              @Override
+              protected FacetsCollectorManager createDrillDownFacetsCollectorManager() {
+                return new AssertingFacetsCollectorManager();
+              }
+
+              @Override
+              protected FacetsCollectorManager createDrillSidewaysFacetsCollectorManager() {
+                return new AssertingFacetsCollectorManager();
+              }
+            };
+
+        SimpleCollectorManager cm =
+            new SimpleCollectorManager(10, Comparator.comparingInt(a -> a.docAndScore.doc));
+        DrillSideways.ConcurrentDrillSidewaysResult<List<DocAndScore>> result =
+            drillSideways.search(ddq, cm);
+        assertEquals(0, result.collectorResult.size());
+
+        // Make sure the "matching docs" are still populated with the appropriate leaf reader
+        // context, which happens as part of #finish getting called:
+        assertEquals(1, result.drillDownFacetsCollector.getMatchingDocs().size());
+        assertEquals(
+            1,
+            result.drillDownFacetsCollector.getMatchingDocs().get(0).context().reader().maxDoc());
+        assertEquals(1, result.drillSidewaysFacetsCollector.length);
+        assertEquals(1, result.drillSidewaysFacetsCollector[0].getMatchingDocs().size());
+        assertEquals(
+            1,
+            result
+                .drillSidewaysFacetsCollector[0]
+                .getMatchingDocs()
+                .get(0)
+                .context()
+                .reader()
+                .maxDoc());
+      }
+    }
   }
 
   private static class Counters {
@@ -1528,15 +1563,7 @@ public class TestDrillSideways extends FacetTestCase {
     Facets facets;
   }
 
-  private static class CollectedResult {
-    final DocAndScore docAndScore;
-    final String id;
-
-    CollectedResult(DocAndScore docAndScore, String id) {
-      this.docAndScore = docAndScore;
-      this.id = id;
-    }
-  }
+  private record CollectedResult(DocAndScore docAndScore, String id) {}
 
   private abstract static class SimpleLeafCollector implements LeafCollector {
     protected Scorable scorer;
@@ -1616,7 +1643,61 @@ public class TestDrillSideways extends FacetTestCase {
           .sorted(comparator)
           .map(cr -> new DocAndScore(cr.docAndScore))
           .limit(numDocs)
-          .collect(Collectors.toList());
+          .toList();
+    }
+  }
+
+  // We can't use AssertingIndexSearcher unfortunately since it may randomly decide to bulk
+  // score a sub-range of docs instead of all docs at once. This is incompatible will drill
+  // sideways, so we have to do our own check here. This just makes sure we call #finish on
+  // the last leaf. It's too bad we need to do this and maybe some day we can clean this up
+  // by rethinking drill-sideways:
+  private static final class DrillSidewaysAssertingIndexSearcher extends IndexSearcher {
+
+    DrillSidewaysAssertingIndexSearcher(IndexReader r) {
+      super(r);
+    }
+
+    @Override
+    protected void search(
+        LeafReaderContextPartition[] partitions, Weight weight, Collector collector)
+        throws IOException {
+      AssertingCollector assertingCollector = AssertingCollector.wrap(collector);
+      super.search(partitions, weight, assertingCollector);
+      assert assertingCollector.hasFinishedCollectingPreviousLeaf;
+    }
+  }
+
+  private static final class AssertingFacetsCollectorManager extends FacetsCollectorManager {
+    @Override
+    public FacetsCollector newCollector() throws IOException {
+      return new AssertingFacetsCollector();
+    }
+
+    @Override
+    public FacetsCollector reduce(Collection<FacetsCollector> collectors) throws IOException {
+      for (FacetsCollector fc : collectors) {
+        assert fc instanceof AssertingFacetsCollector;
+        assert ((AssertingFacetsCollector) fc).hasFinishedLastLeaf == true;
+      }
+      return super.reduce(collectors);
+    }
+  }
+
+  private static final class AssertingFacetsCollector extends FacetsCollector {
+    private boolean hasFinishedLastLeaf = true;
+
+    @Override
+    protected void doSetNextReader(LeafReaderContext context) throws IOException {
+      assert hasFinishedLastLeaf;
+      hasFinishedLastLeaf = false;
+      super.doSetNextReader(context);
+    }
+
+    @Override
+    public void finish() throws IOException {
+      hasFinishedLastLeaf = true;
+      super.finish();
     }
   }
 
@@ -1783,7 +1864,7 @@ public class TestDrillSideways extends FacetTestCase {
     if (VERBOSE) {
       System.out.println("  verify totHits=" + expected.hits.size());
     }
-    assertEquals(expected.hits.size(), actual.resultCount.value);
+    assertEquals(expected.hits.size(), actual.resultCount.value());
     assertEquals(expected.hits.size(), actual.results.size());
     for (int i = 0; i < expected.hits.size(); i++) {
       if (VERBOSE) {
@@ -1833,8 +1914,7 @@ public class TestDrillSideways extends FacetTestCase {
         if (VERBOSE) {
           idx = 0;
           System.out.println("      expected (sorted)");
-          for (int i = 0; i < topNIDs.length; i++) {
-            int expectedOrd = topNIDs[i];
+          for (int expectedOrd : topNIDs) {
             String value = dimValues[dim][expectedOrd];
             System.out.println(
                 "        "
@@ -1912,7 +1992,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("Author", "Lisa");
 
     DrillSidewaysResult r = ds.search(ddq, 10); // this used to fail on IllegalArgEx
-    assertEquals(0, r.hits.totalHits.value);
+    assertEquals(0, r.hits.totalHits.value());
 
     r =
         ds.search(
@@ -1922,7 +2002,7 @@ public class TestDrillSideways extends FacetTestCase {
             10,
             new Sort(new SortField("foo", SortField.Type.INT)),
             false); // this used to fail on IllegalArgEx
-    assertEquals(0, r.hits.totalHits.value);
+    assertEquals(0, r.hits.totalHits.value());
 
     writer.close();
     IOUtils.close(taxoWriter, searcher.getIndexReader(), taxoReader, dir, taxoDir);
@@ -1984,11 +2064,6 @@ public class TestDrillSideways extends FacetTestCase {
     DrillSideways ds =
         new DrillSideways(searcher, config, taxoReader, null, executorService) {
           @Override
-          protected FacetsCollector createDrillDownFacetsCollector() {
-            return null;
-          }
-
-          @Override
           protected FacetsCollectorManager createDrillDownFacetsCollectorManager() {
             return null;
           }
@@ -2001,7 +2076,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("Author", "Bob");
     DrillSidewaysResult r = ds.search(null, ddq, 10);
     Facets facets = r.facets;
-    assertEquals(3, r.hits.totalHits.value);
+    assertEquals(3, r.hits.totalHits.value());
     assertEquals(
         "dim=Author path=[] value=5 childCount=4\n  Lisa (2)\n  Bob (1)\n  Susan (1)\n  Frank (1)\n",
         facets.getTopChildren(10, "Author").toString());
@@ -2024,17 +2099,13 @@ public class TestDrillSideways extends FacetTestCase {
         topNDimsResult.get(0).toString());
 
     // test getAllDims(0)
-    expectThrows(
-        IllegalArgumentException.class,
-        () -> {
-          facets.getAllDims(0);
-        });
+    expectThrows(IllegalArgumentException.class, () -> facets.getAllDims(0));
     // More interesting case: drill-down on two fields
     ddq = new DrillDownQuery(config);
     ddq.add("Author", "Lisa");
     ddq.add("Publish Date", "2010");
     r = ds.search(null, ddq, 10);
-    assertEquals(1, r.hits.totalHits.value);
+    assertEquals(1, r.hits.totalHits.value());
     // Should be able to count on both fields since they're both drill sideways cases
     assertEquals(
         "dim=Publish Date path=[] value=2 childCount=2\n  2010 (1)\n  2012 (1)\n",
@@ -2051,7 +2122,7 @@ public class TestDrillSideways extends FacetTestCase {
   }
 
   public void testScorer() throws Exception {
-    // LUCENE-6001 some scorers, eg ReqExlScorer, can hit NPE if cost is called after nextDoc
+    // LUCENE-6001 some scorers, e.g. ReqExlScorer, can hit NPE if cost is called after nextDoc
     Directory dir = newDirectory();
     Directory taxoDir = newDirectory();
 
@@ -2086,7 +2157,7 @@ public class TestDrillSideways extends FacetTestCase {
     ddq.add("author", bq.build());
     ddq.add("dim", bq.build());
     DrillSidewaysResult r = ds.search(null, ddq, 10);
-    assertEquals(0, r.hits.totalHits.value);
+    assertEquals(0, r.hits.totalHits.value());
 
     writer.close();
     IOUtils.close(searcher.getIndexReader(), taxoReader, taxoWriter, dir, taxoDir);
@@ -2146,7 +2217,7 @@ public class TestDrillSideways extends FacetTestCase {
       facets = new MultiFacets(drillSidewaysFacets, drillDownFacets);
     }
 
-    // Facets computed using FacetsCollecter exposed in DrillSidewaysResult
+    // Facets computed using FacetsCollector exposed in DrillSidewaysResult
     // should match the Facets computed by {@link DrillSideways#buildFacetsResult}
     FacetResult facetResultActual = facets.getTopChildren(2, "dim");
     FacetResult facetResultExpected = r.facets.getTopChildren(2, "dim");
@@ -2162,7 +2233,7 @@ public class TestDrillSideways extends FacetTestCase {
 
   @Test
   public void testDrillSidewaysSearchUseCorrectIterator() throws Exception {
-    // This test reproduces an issue (see github #12211) where DrillSidewaysScorer would ultimately
+    // This test reproduces an issue (see GitHub #12211) where DrillSidewaysScorer would ultimately
     // cause multiple consecutive calls to TwoPhaseIterator::matches, which results in a failed
     // assert in the PostingsReaderBase implementation (or a failing to match a document that should
     // have matched, if asserts are disabled).
@@ -2200,7 +2271,7 @@ public class TestDrillSideways extends FacetTestCase {
     drillDownQuery.add("dim1", "dim1");
     var result = drill.search(drillDownQuery, 99);
     // We expect to match exactly one document from the query above
-    assertEquals(1, result.hits.totalHits.value);
+    assertEquals(1, result.hits.totalHits.value());
 
     indexReader.close();
     taxonomyReader.close();
