@@ -20,7 +20,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
 import org.apache.lucene.document.StringField;
@@ -414,11 +413,7 @@ public class TestExactFacetSetMatcher extends FacetTestCase {
 
   private static Query createFastMatchQuery(String field, int... values) {
     return new TermInSetQuery(
-        field,
-        Arrays.stream(values)
-            .mapToObj(String::valueOf)
-            .map(BytesRef::new)
-            .collect(Collectors.toList()));
+        field, Arrays.stream(values).mapToObj(String::valueOf).map(BytesRef::new).toList());
   }
 
   private static void addFastMatchField(
